--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,10 @@
     "files.associations": {
         "ostream": "cpp"
     },
+    "python.autoComplete.extraPaths": [
+        "/home/tyler/basler_ws/devel/lib/python3/dist-packages",
+        "/home/tyler/r3live_ws/devel/lib/python3/dist-packages",
+        "/home/tyler/ws_livox/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
 }
