Done with basic functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_compile_definitions(MAIN_DIR=\"${LidarBaslerMapper_SOURCE_DIR}\")
 
 add_subdirectory(BaslerCalibration)
 add_subdirectory(ImagePCDGrabber)
+add_subdirectory(Mapper)
