Started work on the live view

--- a/BaslerCalibration/CMakeLists.txt
+++ b/BaslerCalibration/CMakeLists.txt
@@ -7,7 +7,7 @@ add_compile_definitions(BASLER_DIR=\"${BaslerCalibration_SOURCE_DIR}\")
 
 find_package(Pylon QUIET)
 if (NOT ${Pylon_FOUND})
-    include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindPylon.cmake")
+    include("../FindPylon.cmake")
 endif ()
 include_directories(${Pylon_INCLUDE_DIRS})
 link_directories(${Pylon_LIBRARY_DIRS})
