--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_compile_definitions(MAIN_DIR=\"${LidarBaslerMapper_SOURCE_DIR}\")
 add_subdirectory(BaslerCalibration)
 add_subdirectory(ImagePCDGrabber)
 add_subdirectory(Mapper)
+add_subdirectory(LiveView)
