--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(BaslerCalibration)
 add_subdirectory(ImagePCDGrabber)
 add_subdirectory(Mapper)
 add_subdirectory(LiveView)
+add_subdirectory(CaptureLidarBuffered)
