--- a/LiveView/CMakeLists.txt
+++ b/LiveView/CMakeLists.txt
@@ -23,30 +23,17 @@ include_directories(${Pylon_INCLUDE_DIRS})
 link_directories(${Pylon_LIBRARY_DIRS})
 add_definitions(${Pylon_DEFINITIONS})
 
-include(FetchContent)
-FetchContent_Declare(
-		yaml-cpp
-		GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-		GIT_SHALLOW	ON
-		GIT_TAG yaml-cpp-0.6.3
-	)
-FetchContent_GetProperties(yaml-cpp)
-if(NOT yaml-cpp_POPULATED)
-	message(STATUS "Populating yaml-cpp...")
-	FetchContent_Populate(yaml-cpp)
-	# Add here options for yaml-cpp building
-	set(YAML_CPP_BUILD_TESTS OFF)
-	add_subdirectory(${yaml-cpp_SOURCE_DIR} ${yaml-cpp_BINARY_DIR})
-	message(STATUS "Done.")
-endif()
-include_directories(BEFORE SYSTEM ${yaml-cpp_SOURCE_DIR} ${yaml-cpp_BINARY_DIR}/include)
+find_package(yaml-cpp REQUIRED)
+include_directories(${yaml-cpp_INCLUDE_DIRS})
+link_directories(${yaml-cpp_LIBRARY_DIRS})
+add_definitions(${yaml-cpp_DEFINITIONS})
 
 find_package(PCL REQUIRED COMPONENTS common io)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable(LiveView main.cpp ../CaptureLidarBuffered/LidarCapture.cpp)
+add_executable(LiveView main.cpp ../Mapper/projectPoints.cpp ../CaptureLidarBuffered/LidarCapture.cpp)
 
 target_link_libraries(LiveView Threads::Threads)
 target_link_libraries(LiveView ${OpenCV_LIBRARIES})
