--- a/Mapper/CMakeLists.txt
+++ b/Mapper/CMakeLists.txt
@@ -12,30 +12,17 @@ add_definitions(${OpenCV_DEFINITIONS})
 
 link_directories(~/Livox-SDK/build/sdk_core/)
 
-include(FetchContent)
-FetchContent_Declare(
-		yaml-cpp
-		GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-		GIT_SHALLOW	ON
-		GIT_TAG yaml-cpp-0.6.3
-	)
-FetchContent_GetProperties(yaml-cpp)
-if(NOT yaml-cpp_POPULATED)
-	message(STATUS "Populating yaml-cpp...")
-	FetchContent_Populate(yaml-cpp)
-	# Add here options for yaml-cpp building
-	set(YAML_CPP_BUILD_TESTS OFF)
-	add_subdirectory(${yaml-cpp_SOURCE_DIR} ${yaml-cpp_BINARY_DIR})
-	message(STATUS "Done.")
-endif()
-include_directories(BEFORE SYSTEM ${yaml-cpp_SOURCE_DIR} ${yaml-cpp_BINARY_DIR}/include)
+find_package(yaml-cpp REQUIRED)
+include_directories(${yaml-cpp_INCLUDE_DIRS})
+link_directories(${yaml-cpp_LIBRARY_DIRS})
+add_definitions(${yaml-cpp_DEFINITIONS})
 
 find_package(PCL REQUIRED COMPONENTS common io)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable(Mapper main.cpp)
+add_executable(Mapper main.cpp projectPoints.cpp)
 
 target_link_libraries(Mapper ${OpenCV_LIBRARIES})
 target_link_libraries(Mapper ${PCL_LIBRARIES})
